ESM-871 - Updated UI for Recipients Manager component
- Refactored various UI's to incorporate updated table styling that is used by the recipients manager lists

--- a/modules/communications/client/views/communication-edit.html
+++ b/modules/communications/client/views/communication-edit.html
@@ -10,11 +10,13 @@
 					ng-click="s.downloadAddressList()">
 				<span class="glyphicon glyphicon-download-alt"></span><span>Download CSV</span></button>
 			<button type="button" class="btn btn-default btn-sm" ng-click="cancel()">Cancel</button>
-			<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)"><span class="glyphicon glyphicon-trash"></span><span>Delete</span>
-      </button>
+			<button class="btn btn-danger btn-sm" ng-if="canDelete" ng-click="delete(s.communication)">
+				<span class="glyphicon glyphicon-trash"></span><span>Delete</span>
+      		</button>
 			<button type="button" class="btn btn-primary btn-sm" ng-click="save(projectUpdateForm.$valid)">Save</button>
-			<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)"><span
-        class="glyphicon glyphicon-send"></span><span>Send</span></button>
+			<button type="button" class="btn btn-success btn-sm" ng-if="mode === 'edit'" ng-disabled="projectUpdateForm.$invalid" ng-click="send(projectUpdateForm.$valid)">
+				<span class="glyphicon glyphicon-send"></span><span>Send</span>
+			</button>
 		</div>
 	</div>
 
@@ -32,65 +34,61 @@
 		</ul>
 
 		<div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="projectUpdateDetailsForm">
-			<div class="panel panel-default">
-				<div class="panel-body">
-					<div class="form-group" x-show-errors>
-						<label class="control-label">Update Name<em class="required">(Required)</em></label>
-						<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
-					</div>
-					<div class="form-group">
-						<label class="control-label">Related Content ({{documents.length}})</label>
-						<div class="tag-list-container form-control clearfix">
-							<ul class="tag-list">
-								<li class="tag" ng-repeat="doc in documents">
-									<span class="tag-name">{{doc.displayName}}</span>
-									<button class="btn" type="button" ng-click="removeDocument(doc._id)"><span aria-hidden="true">×</span></button>
-								</li><li class="add-tag">
-									<button class="btn btn-default btn-sm" title="Add Documents"
-											x-document-mgr-link-modal
-											x-project="project"
-											x-target-name="s.communication.name"
-											x-published-only="'false'"
-									        x-on-ok="addDocuments"><span class="glyphicon glyphicon-plus"></span><span></span></button>
-								</li>
-							</ul>
-						</div>
-					</div>
-					<div class="form-group">
-						<button type="button" class="btn btn-default btn-sm"
-							x-email-template-chooser
-							x-project="project"
-							x-current="emailTemplate"
-              				x-group-restricted="'invitation'">Use Existing Template</button>
-					</div>
-					<div class="form-group" x-show-errors>
-						<label class="control-label">Subject<em class="required">(Required)</em></label>
-						<input class="form-control" ng-model="s.communication.templateSubject" id="subject" name="subject" title="Subject" required></input>
-					</div>
-					<div class="form-group no-margin" x-show-errors>
-						<label class="control-label">Message<em class="required">(Required)</em></label>
-						<textarea class="form-control" name="message"
-							id="message"
-							ui-tinymce="tinymceOptions"
-							ng-model="s.communication.templateContent"  
-							title="Message"
-								  rows="10"
-							required ng-blur="activeItem = false"></textarea>
-					</div>
-				</div><!--/panel-body-->
-			</div><!--/panel-->
+			<div class="form-group" x-show-errors>
+				<label class="control-label">Update Name<em class="required">(Required)</em></label>
+				<input class="form-control" ng-model="s.communication.name" id="name" name="name" title="Name" required/>
+			</div>
+			<div class="form-group">
+				<label class="control-label">Related Content ({{documents.length}})</label>
+				<div class="tag-list-container form-control clearfix">
+					<ul class="tag-list">
+						<li class="tag" ng-repeat="doc in documents">
+							<span class="tag-name">{{doc.displayName}}</span>
+							<button class="btn" type="button" ng-click="removeDocument(doc._id)"><span aria-hidden="true">×</span></button>
+						</li><li class="add-tag">
+							<button class="btn btn-default btn-sm" title="Add Documents"
+								x-document-mgr-link-modal
+								x-project="project"
+								x-target-name="s.communication.name"
+								x-published-only="'false'"
+								x-on-ok="addDocuments"><span class="glyphicon glyphicon-plus"></span></button>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="form-group">
+				<button type="button" class="btn btn-default btn-sm"
+					x-email-template-chooser
+					x-project="project"
+					x-current="emailTemplate"
+					x-group-restricted="'invitation'">Use Existing Template</button>
+			</div>
+			<div class="form-group" x-show-errors>
+				<label class="control-label">Subject<em class="required">(Required)</em></label>
+				<input class="form-control" ng-model="s.communication.templateSubject" id="subject" name="subject" title="Subject" required></input>
+			</div>
+			<div class="form-group" x-show-errors>
+				<label class="control-label">Message<em class="required">(Required)</em></label>
+				<textarea class="form-control" name="message"
+					id="message"
+					ui-tinymce="tinymceOptions"
+					ng-model="s.communication.templateContent"  
+					title="Message"
+							rows="10"
+					required ng-blur="activeItem = false"></textarea>
+			</div>
 		</div><!--/tab-pane-->
 
 		<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
 			<x-recipients-mgr
-					x-project="project"
-					x-recipients="recipients"
-					x-mode="'edit'"
-					x-enable-add-new="true"
-					x-enable-add-existing="true"
-					x-enable-cc="true"
-					x-enable-bcc="true"
-					x-show-mail="true">
+				x-project="project"
+				x-recipients="recipients"
+				x-mode="'edit'"
+				x-enable-add-new="true"
+				x-enable-add-existing="true"
+				x-enable-cc="true"
+				x-enable-bcc="true"
+				x-show-mail="true">
 		</div>
 
 		<div class="form-footer">
