--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -282,7 +282,7 @@
 														x-project="project"
 														x-doc="doc"
 														x-on-update="documentMgr.onDocumentUpdate">
-													<span class="glyphicon glyphicon-pencil"></span>
+													<span class="glyphicon glyphicon-edit"></span>
 												</button>
 											</li>
 											<li ng-if="doc.userCan.publish && !doc.isPublished">
