--- a/modules/communications/client/views/communication-view.html
+++ b/modules/communications/client/views/communication-view.html
@@ -22,41 +22,37 @@
 	</ul>
 
 	<div class="tab-pane active" ng-show="form.curTab === 'Update Details'" ng-form="projectUpdateDetailsForm">
-
-		<div class="panel panel-default">
-			<div class="panel-body detail-panel">
-				<div class="detail-row">
-					<label class="control-label">Update Name</label>
-					<span class="value">{{s.communication.name}}</span>
-				</div>
-				<div class="detail-row">
-					<label>Related Content ({{documents.length}})</label>
-					<div class="anchor-list">
-						<a ng-repeat="doc in documents" href="/api/document/{{ doc._id }}/fetch" target="_self">{{doc.displayName}}{{$last ? '' : ', '}}</a>
-					</div>
-				</div>
-				<div class="detail-row">
-					<label>Subject</label>
-					<span class="value">{{s.communication.templateSubject}}</span>
-				</div>
-				<div class="detail-row">
-					<label>Message</label>
-					<pre class="value wrap-text" id="shortDesc" ng-bind-html="s.communication.templateContent"></pre>
-				</div>
+		<div class="detail-row">
+			<label class="control-label">Update Name</label>
+			<span class="value">{{s.communication.name}}</span>
+		</div>
+		<div class="detail-row">
+			<label>Related Content ({{documents.length}})</label>
+			<div class="anchor-list">
+				<span ng-if="!documents.length">No related content</span>
+				<a ng-repeat="doc in documents" href="/api/document/{{ doc._id }}/fetch" target="_self">{{doc.displayName}}{{$last ? '' : ', '}}</a>
 			</div>
+		</div>
+		<div class="detail-row">
+			<label>Subject</label>
+			<span class="value">{{s.communication.templateSubject}}</span>
+		</div>
+		<div class="detail-row">
+			<label>Message</label>
+			<pre class="value wrap-text" id="shortDesc" ng-bind-html="s.communication.templateContent"></pre>
 		</div>
 	</div>
 
 	<div class="tab-pane" ng-show="form.curTab === 'recipients'" ng-form="recipientsForm">
 		<x-recipients-mgr
-				x-project="project"
-				x-recipients="recipients"
-				x-mode="'view'"
-				x-enable-add-new="false"
-				x-enable-add-existing="false"
-				x-enable-cc="true"
-				x-enable-bcc="true"
-				x-show-mail="true">
+			x-project="project"
+			x-recipients="recipients"
+			x-mode="'view'"
+			x-enable-add-new="false"
+			x-enable-add-existing="false"
+			x-enable-cc="true"
+			x-enable-bcc="true"
+			x-show-mail="true">
 	</div>
 
 </div>
