--- a/modules/project-comments/client/views/period-list.html
+++ b/modules/project-comments/client/views/period-list.html
@@ -33,7 +33,7 @@
 	</div>
 
 	<div class="table-container">
-		<table class="pcp-table" ng-table="tableParams" show-filter="toggleFilter">
+		<table class="pcp-table table-hover" ng-table="tableParams" show-filter="toggleFilter">
 			<tr class="clickable" ng-repeat="p in $data"  ng-if="project.userCan.createCommentPeriod || p.isPublished"  ui-sref="p.commentperiod.detail({periodId:p._id})">
 				<td title="'Type'" sortable="'periodType'">
 					{{p.periodType}}
