--- a/modules/groups/client/views/group-edit.html
+++ b/modules/groups/client/views/group-edit.html
@@ -41,10 +41,14 @@
 							<tr ng-repeat="o in $data">
 								<td class="name-col"
 									header-class="'name-col'"
-									data-title="'Name'"
-									filter="{'displayName':'text'}"
-									sortable="'displayName'">{{o.displayName}}
-								</td>
+									data-title="'Last Name'"
+									filter="{'lastName':'text'}"
+									sortable="'lastName'">{{o.lastName}}</td>
+								<td class="name-col"
+									header-class="'name-col'"
+									data-title="'First Name'"
+									filter="{'firstName':'text'}"
+									sortable="'firstName'">{{o.firstName}}</td>
 								<td class="email-col"
 									header-class="'email-col'"
 									data-title="'Email'"
